--- a/index.html
+++ b/index.html
@@ -5,13 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>BCI — Introduction of Technology</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    .right-fixed {
-      position: sticky;
-      top: 100px;
-      height: fit-content;
-    }
-  </style>
 </head>
 
 <body>
@@ -29,49 +22,45 @@
 
   <main class="container">
 
+    <!-- TOP FULL-WIDTH IMAGE -->
+    <section style="margin-top:20px; margin-bottom:25px;">
+      <img src="bci-hero.jpg"
+           alt="BCI Intro Image"
+           style="width:100%; height:auto; border-radius:12px;">
+    </section>
+
+    <!-- CONTENT CARDS -->
     <section class="section">
-      <div class="grid-2">
 
-        <!-- LEFT SIDE: CARDS -->
-        <div>
-
-          <div class="card">
-            <h3>What is a Brain–Computer Interface (BCI)?</h3>
-            <ul>
-              <li>BCIs enable direct communication between the human brain and external devices by translating electrical brain signals into digital commands.</li>
-              <li>This allows users to control technologies such as computers, robotic limbs, and communication tools without physical movement.</li>
-            </ul>
-          </div>
-
-          <div class="card" style="margin-top:18px;">
-            <h3>Types and significance</h3>
-            <ul>
-              <li>BCIs can be non-invasive (external sensors) or invasive (implants), with implanted devices offering more accurate signal detection.</li>
-              <li>The technology is rapidly moving from research settings into real-world use for individuals with severe disabilities.</li>
-            </ul>
-          </div>
-
-          <div class="card" style="margin-top:18px;">
-            <h3>Promise and ethical concerns</h3>
-            <ul>
-              <li>BCIs have potential to restore communication and independence for people who cannot move or speak.</li>
-              <li>They also raise ethical concerns involving privacy, safety, autonomy, and the impact of technology that directly interfaces with neural activity.</li>
-            </ul>
-          </div>
-
-          <p class="muted" style="margin-top:14px;">Prepared by — Mohamed Taha, Dre Miller, Tyler Thai, John Zhou</p>
-        </div>
-
-        <!-- RIGHT SIDE: FIXED IMAGE -->
-        <div class="right-fixed">
-          <img src="bci-hero.jpg" alt="BCI illustration"
-               style="width:100%; height:auto; border-radius:10px;">
-        </div>
-
+      <div class="card">
+        <h3>What is a Brain–Computer Interface (BCI)?</h3>
+        <ul>
+          <li>BCIs enable direct communication between the brain and external devices by translating electrical neural activity into digital commands.</li>
+          <li>This allows individuals to control computers, robotic limbs, and communication tools without physical movement.</li>
+        </ul>
       </div>
+
+      <div class="card" style="margin-top:18px;">
+        <h3>Types and significance</h3>
+        <ul>
+          <li>BCIs can be non-invasive (external sensors) or invasive (implants placed directly on or inside the brain), offering different accuracy levels.</li>
+          <li>The technology is rapidly transitioning from research environments into real-world use for people with severe disabilities.</li>
+        </ul>
+      </div>
+
+      <div class="card" style="margin-top:18px;">
+        <h3>Promise and ethical concerns</h3>
+        <ul>
+          <li>BCIs have the potential to restore independence and communication for people who cannot move or speak.</li>
+          <li>They also introduce major ethical concerns involving privacy, autonomy, safety, and the implications of direct neural interfacing.</li>
+        </ul>
+      </div>
+
+      <p class="muted" style="margin-top:14px;">Prepared by — Mohamed Taha, Dre Miller, Tyler Thai, John Zhou</p>
     </section>
 
   </main>
 </body>
 </html>
+
 
