--- a/ethics.html
+++ b/ethics.html
@@ -53,7 +53,7 @@
           <div class="card" style="margin-top:18px;">
             <h3>Ethical lenses</h3>
             <ul>
-              <li><strong>Utilitarian perspective:</strong> BCIs are ethical if the benefits—such as restored communication and improved quality of life—outweigh potential harms.</li>
+              <li><strong>Utilitarian perspective:</strong> BCIs are ethical if the benefits such as restored communication and improved quality of life outweigh potential harms.</li>
               <li><strong>Deontological perspective:</strong> Emphasizes autonomy, informed consent, and strict protections for neural data regardless of overall societal benefit.</li>
             </ul>
           </div>
