--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main class="container">
 
     <!-- TOP FULL-WIDTH IMAGE -->
-    <section style="margin-top:15px; margin-bottom:20px;">
+    <section style="margin-top:20px; margin-bottom:25px;">
       <img src="bci-hero.jpg"
            alt="BCI Intro Image"
            style="width:100%; height:auto; border-radius:12px;">
@@ -56,7 +56,28 @@
         </ul>
       </div>
 
+      <!-- SECTION LINK BUTTONS -->
+      <div style="margin-top:25px; display:flex; gap:15px; flex-wrap:wrap;">
+
+        <a href="how-it-works.html" class="card" 
+           style="text-decoration:none; width:240px; text-align:center;">
+          <h3 style="margin:10px 0;">➡ Applications</h3>
+        </a>
+
+        <a href="ethics.html" class="card" 
+           style="text-decoration:none; width:240px; text-align:center;">
+          <h3 style="margin:10px 0;">➡ Critical Discussion</h3>
+        </a>
+
+        <a href="recommendations.html" class="card" 
+           style="text-decoration:none; width:240px; text-align:center;">
+          <h3 style="margin:10px 0;">➡ Recommendations</h3>
+        </a>
+
+      </div>
+
       <p class="muted" style="margin-top:14px;">Prepared by — Mohamed Taha, Dre Miller, Tyler Thai, John Zhou</p>
+
     </section>
 
   </main>
