--- a/recommendations.html
+++ b/recommendations.html
@@ -7,69 +7,68 @@
   <link rel="stylesheet" href="style.css">
   <style>
     .right-fixed {
-      position: sticky;
-      top: 100px;
-      height: fit-content;
+      position: relative;
     }
   </style>
 </head>
-
 <body>
-  <nav class="topbar">
-    <div class="nav-inner container">
-      <div class="brand">Brain–Computer Interfaces</div>
-      <div class="links">
-        <a href="index.html">Introduction</a>
-        <a href="how-it-works.html">Applications</a>
-        <a href="ethics.html">Critical Discussion</a>
-        <a class="active" href="recommendations.html">Recommendations</a>
-      </div>
+
+<nav class="topbar">
+  <div class="nav-inner container">
+    <div class="brand">Brain–Computer Interfaces</div>
+    <div class="links">
+      <a href="index.html">Introduction</a>
+      <a href="how-it-works.html">Applications</a>
+      <a href="ethics.html">Critical Discussion</a>
+      <a class="active" href="recommendations.html">Recommendations</a>
     </div>
-  </nav>
+  </div>
+</nav>
 
-  <main class="container">
-    <section class="section">
-      <div class="grid-2">
+<main class="container">
+  <section class="section">
+    <div class="grid-2">
 
-        <!-- LEFT SIDE -->
-        <div>
+      <div>
 
-          <div class="card">
-            <h3>Technical recommendations</h3>
-            <ul>
-              <li>Improve implant durability and long-term reliability to reduce repeat surgical procedures.</li>
-              <li>Implement stronger protections for neural data storage and transmission.</li>
-            </ul>
-          </div>
-
-          <div class="card" style="margin-top:18px;">
-            <h3>Social recommendations</h3>
-            <ul>
-              <li>Provide realistic public education about BCI capabilities and limitations.</li>
-              <li>Offer psychological and long-term support for individuals adapting to implanted devices.</li>
-              <li>Promote equitable access to prevent widening technological inequality.</li>
-            </ul>
-          </div>
-
-          <div class="card" style="margin-top:18px;">
-            <h3>Policy recommendations</h3>
-            <ul>
-              <li>Define neural data as highly sensitive information with strong legal safeguards.</li>
-              <li>Require long-term safety monitoring and transparent reporting for device failures or side effects.</li>
-            </ul>
-          </div>
-
+        <div class="card">
+          <h3>Technical improvements</h3>
+          <ul>
+            <li>Increase implant durability and reduce surgical risks.</li>
+            <li>Improve signal stability and reduce scar tissue interference.</li>
+            <li>Strengthen security to prevent unauthorized access to neural data.</li>
+          </ul>
         </div>
 
-        <!-- RIGHT FIXED IMAGE -->
-        <div class="right-fixed">
-          <img src="bci-clinic.jpg" alt="BCI clinic image"
-               style="width:100%; height:auto; border-radius:10px;">
+        <div class="card">
+          <h3>Social strategies</h3>
+          <ul>
+            <li>Educate the public about realistic BCI capabilities.</li>
+            <li>Provide psychological and training support for new users.</li>
+            <li>Ensure fair access to avoid widening inequality.</li>
+          </ul>
+        </div>
+
+        <div class="card">
+          <h3>Policy recommendations</h3>
+          <ul>
+            <li>Legally classify neural data as highly sensitive.</li>
+            <li>Require long-term monitoring for implanted devices.</li>
+            <li>Mandate transparency when reporting side effects or failures.</li>
+          </ul>
         </div>
 
       </div>
-    </section>
-  </main>
+
+      <div class="right-fixed">
+        <img src="bci-future.jpg" style="width:100%; max-height:900px; object-fit:cover; border-radius:10px;">
+      </div>
+
+    </div>
+  </section>
+</main>
+
 </body>
 </html>
+
 
