--- a/recommendations.html
+++ b/recommendations.html
@@ -61,7 +61,7 @@
       </div>
 
       <div class="right-fixed">
-        <img src="bci-future.jpg" style="width:100%; max-height:900px; object-fit:cover; border-radius:10px;">
+        <img src="bci-clinic.jpg" style="width:100%; max-height:900px; object-fit:cover; border-radius:10px;">
       </div>
 
     </div>
